--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -24,7 +24,7 @@
     -->
 
     <extensions defaultExtensionNs="com.intellij">
-        <fileTypeFactory implementation="com.techern.dlang.DFileTypeFactory" />
+        <fileTypeFactory implementation="com.techern.dlang.filetype.DFileTypeFactory" />
     </extensions>
 
     <application-components>
